flask: request form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
     <form method="POST" action="/form">
         <p>
             Email:</br>
-            <input style="width: 20%" type="text" name="email"/>
+            <input style="width: 20%" type="text" name="email" id="email" class="input-form"/>
         </p>
         <p>
             Status:</br>
